--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 Assets/Sound/BGM/* filter=lfs diff=lfs merge=lfs -text
+Assets/Sound/BGM filter=lfs diff=lfs merge=lfs -text
+Assets/Sound/BGM.meta filter=lfs diff=lfs merge=lfs -text
+Assets/Sound/SE filter=lfs diff=lfs merge=lfs -text
+Assets/Sound/SE.meta filter=lfs diff=lfs merge=lfs -text
